fixed/styled overlay description, text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -243,15 +243,18 @@ body {
     margin: auto;
     display: flex;
     width: 40rem;
-    height: 42.625rem;
+    height: auto;
+    max-height: 100vh;
     flex-direction: column;
     align-items: flex-start;
     gap: 2rem;
     background: #c9d4f14a;
+    overflow-y: auto;
 
 }
 
-.planet-info {
+.planet-info,
+.planet-info__titles {
     color: #FFF;
     font-family: 'Roboto Condensed';
     font-size: 1.125rem;
@@ -269,6 +272,25 @@ body {
 
 .group-container {
 
+}
+
+.planet-info__titles {
+    font-family: 'Secular One';
+    font-weight: 400;
+    line-height: 100%; /* 1.125rem */
+    letter-spacing: 0.10125rem;
+}
+
+.planet-info__rangeContainer,
+.planet-info__temperaturesContainer {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+.planet-info__rangeContainer > p,
+.planet-info__temperaturesContainer > p  {
+    margin-right: auto; 
 }
 
 
